<resources>
<string name="app_name">Wire Reference</string>
<string name="about">About:</string>
<string name="about_btn">About</string>
<string name="about_title"></string>
<string name="about_close"></string>
<string name="description">Utility to help wire up Data and Voice cables.\n</string>
<string name="cat5about">The specification for Category 5 cable was defined in ANSI/TIA/EIA-568-A, with clarification in TSB-95. These documents specified performance characteristics and test requirements for frequencies of up to 100 MHz. Cable types, connector types and cabling topologies are defined by TIA/EIA-568-B. The cable is terminated in either the T568A scheme or the T568B scheme. The two schemes work equally well and may be mixed in an installation so long as the same scheme is used on both ends of each cable. Nearly always, 8P8C modular connectors, often referred to as RJ45, are used for connecting category 5 cable. The USOC/RJ-61 standard is used in multi-line telephone connections.\n\n Each of the four pairs in a Cat 5 cable has differing precise number of twists per metre to minimize crosstalk between the pairs. Although cable assemblies containing 4 pairs are common, Category 5 is not limited to 4 pairs. Backbone applications involve using up to 100 pairs. This use of balanced lines helps preserve a high signal-to-noise ratio despite interference from both external sources and crosstalk from other pairs. Category 5 cabling is most commonly used for faster Ethernet networks, such as 100BASE-TX and 1000BASE-T.\n\n The cable is available in both stranded and solid conductor forms. The stranded form is more flexible and withstands more bending without breaking and is suited for reliable connections with insulation piercing connectors, but makes unreliable connections in insulation-displacement connectors (IDCs). The solid form is less expensive and makes reliable connections into insulation displacement connectors, but makes unreliable connections in insulation piercing connectors. Taking these things into account, building wiring (for example, the wiring inside the wall that connects a wall socket to a central patch panel) is solid core, while patch cables (for example, the movable cable that plugs into the wall socket on one end and a computer on the other) are stranded. Outer insulation is typically PVC or LSOH. The specific category of cable in use can be identified by the printing on the side of the cable.</string>
<string name="cat5aradius">Most Category 5 cables can be bent at any radius exceeding approximately four times the diameter of the cable.\n\n According to the ANSI/TIA/EIA standard for category 5e copper cable (TIA/EIA 568-5-A), the maximum length for a cable segment is 100 meters (328 feet). If longer runs are required, the use of active hardware such as a repeater, or a switch, is necessary. The specifications for 10BASE-T networking specify a 100 metre length between active devices. This allows for 90 metres of fixed cabling, two connectors and two patch leads of 5 metres, one at each end.</string>
<string name="cat5aconductors">10BASE-T and 100BASE-TX Ethernet connections require two cable pairs. \n\n 1000BASE-T Ethernet connections require four cable pairs.</string>
<string name="cat5A">TIA/EIA&#8211;568&#8211;A.1&#8211;2001 Cat 5 A</string>
<string name="cat5B">TIA/EIA&#8211;568&#8211;B.1&#8211;2001 Cat 5 B</string>
<string name="cat5xover">E10BASE-T or 100BASE-TX Crossover</string>
<string name="cat5xoverdescribe">An Ethernet crossover cable is a type of Ethernet cable used to connect computing devices together directly. Normal straight through or patch cables were used to connect from a host network interface controller (a computer or similar device) to a network switch, hub or router. A cable with connections that "cross over" was used to connect two devices of the same type: two hosts or two switches to each other. Owing to the inclusion of Auto-MDIX capability, modern implementations of the Ethernet over twisted pair standards usually no longer require the use of crossover cables.</string>
<string name="cat5xoveroverview">The 10BASE-T and 100BASE-TX Ethernet standards use one wire pair for transmission in each direction. By convention, one wire of the pair is designated "+" and the other "-". Following traditional telephone terminology, the + signal from each pair connects to the tip conductor, and the - signal is connected to the ring conductor. This requires that the transmit pair of each device be connected to the receive pair of the device on the other end. When a terminal device is connected to a switch or hub, this crossover is done internally in the switch or hub. A standard straight through cable is used for this purpose where each pin of the connector on one end is connected to the corresponding pin on the other connector. \n\nOne network interface controller may be connected directly to another without the use of a switch or hub, but in that case the crossover must be done externally in the cable or modular crossover adapter in a manner similar to how the null modem was used to directly connect two teleprinters. Since 10BASE-T and 100BASE-TX use pairs 2 and 3, these two pairs must be swapped in the cable. This is a crossover cable. A crossover cable was also used to connect two hubs or two switches on their upstream ports . \n\nBecause the only difference between the T568A and T568B pin/pair assignments are that pairs 2 and 3 are swapped, a crossover cable may be envisioned as a cable with one modular connector following T568A and the other T568B (see Jack crossover wiring). Such a cable will work for 10BASE-T or 100BASE-TX. Gigabit Ethernet (and an early Fast Ethernet variant, 100BASE-T4) use all four pairs and also requires the other two pairs (1 and 4) to be swapped. This meant common crossover cables available in the retail market were usually not compatible with the Gigabit Ethernet convention, but newer crossover cables could be made that worked for all speeds. The polarity of each pair is not swapped, but the pairs crossed as a unit: the two wires within each pair are not crossed.</string>
<string name="cat5xoverpinouts">In practice, it does not matter if non-crossover Ethernet cables are wired as T568A or T568B, just so long as both ends follow the same wiring format. Typical commercially available "pre-wired" cables can follow either format depending the manufacturer. What this means is that one manufacturer\'s cables are wired one way and another\'s the other way, yet both are correct and will work. In either case, T568A or T568B, a normal (un-crossed) cable will have both ends wired according to the layout in the Connection 1 column. \n\nAlthough the Gigabit crossover is defined in the Gigabit Ethernet standard, in practice all Gigabit PHYs feature an auto-MDIX capability and are designed for compatibility with the existing 100BASE-TX crossovers. The IEEE-specified Gigabit crossover is generally seen as unnecessary. \n\nCertain equipment or installations, including those in which phone and or power are mixed with data in the same cable, may require that the "non-data" pairs 1 and 4 (pins 4, 5, 7 and 8) remain un-crossed.</string>
<string name="cat5xoverga">Gigabit T568A crossover</string>
<string name="cat5xovergadescribe">An Ethernet crossover cable is a type of Ethernet cable used to connect computing devices together directly. Normal straight through or patch cables were used to connect from a host network interface controller (a computer or similar device) to a network switch, hub or router. A cable with connections that "cross over" was used to connect two devices of the same type: two hosts or two switches to each other. Owing to the inclusion of Auto-MDIX capability, modern implementations of the Ethernet over twisted pair standards usually no longer require the use of crossover cables.</string>
<string name="cat5xovergaoverview">The 10BASE-T and 100BASE-TX Ethernet standards use one wire pair for transmission in each direction. By convention, one wire of the pair is designated "+" and the other "-". Following traditional telephone terminology, the + signal from each pair connects to the tip conductor, and the - signal is connected to the ring conductor. This requires that the transmit pair of each device be connected to the receive pair of the device on the other end. When a terminal device is connected to a switch or hub, this crossover is done internally in the switch or hub. A standard straight through cable is used for this purpose where each pin of the connector on one end is connected to the corresponding pin on the other connector. \n\nOne network interface controller may be connected directly to another without the use of a switch or hub, but in that case the crossover must be done externally in the cable or modular crossover adapter in a manner similar to how the null modem was used to directly connect two teleprinters. Since 10BASE-T and 100BASE-TX use pairs 2 and 3, these two pairs must be swapped in the cable. This is a crossover cable. A crossover cable was also used to connect two hubs or two switches on their upstream ports . \n\nBecause the only difference between the T568A and T568B pin/pair assignments are that pairs 2 and 3 are swapped, a crossover cable may be envisioned as a cable with one modular connector following T568A and the other T568B (see Jack crossover wiring). Such a cable will work for 10BASE-T or 100BASE-TX. Gigabit Ethernet (and an early Fast Ethernet variant, 100BASE-T4) use all four pairs and also requires the other two pairs (1 and 4) to be swapped. This meant common crossover cables available in the retail market were usually not compatible with the Gigabit Ethernet convention, but newer crossover cables could be made that worked for all speeds. The polarity of each pair is not swapped, but the pairs crossed as a unit: the two wires within each pair are not crossed.</string>
<string name="cat5xovergapinouts">In practice, it does not matter if non-crossover Ethernet cables are wired as T568A or T568B, just so long as both ends follow the same wiring format. Typical commercially available "pre-wired" cables can follow either format depending the manufacturer. What this means is that one manufacturer\'s cables are wired one way and another\'s the other way, yet both are correct and will work. In either case, T568A or T568B, a normal (un-crossed) cable will have both ends wired according to the layout in the Connection 1 column. \n\nAlthough the Gigabit crossover is defined in the Gigabit Ethernet standard, in practice all Gigabit PHYs feature an auto-MDIX capability and are designed for compatibility with the existing 100BASE-TX crossovers. The IEEE-specified Gigabit crossover is generally seen as unnecessary. \n\nCertain equipment or installations, including those in which phone and or power are mixed with data in the same cable, may require that the "non-data" pairs 1 and 4 (pins 4, 5, 7 and 8) remain un-crossed.</string>
<string name="cat5xovergb">Gigabit T568B crossover</string>
<string name="cat5xovergbdescribe">An Ethernet crossover cable is a type of Ethernet cable used to connect computing devices together directly. Normal straight through or patch cables were used to connect from a host network interface controller (a computer or similar device) to a network switch, hub or router. A cable with connections that "cross over" was used to connect two devices of the same type: two hosts or two switches to each other. Owing to the inclusion of Auto-MDIX capability, modern implementations of the Ethernet over twisted pair standards usually no longer require the use of crossover cables.</string>
<string name="poepowerdevicesdescribeb">Powering Devices Description</string>
<string name="poepowerdeviceschart">Power Levels Available</string>
<string name="poepowerdeviceschart2">Stages of powering up a PoE link</string>
<string name="poe">POE</string>
</resources>