<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <Button
        android:id="@+id/poepowerdevicesdescribe"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:text="@string/poepowerdevicesdescribeb" >
    </Button>
    <Button
        android:id="@+id/poepowerdeviceschart"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:text="@string/poepowerdeviceschart" >
    </Button>
        <Button
        android:id="@+id/poepowerdeviceschart2"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:text="@string/poepowerdeviceschart2" >
    </Button>
</LinearLayout>